# proxxyy

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: ci.yml  release.yml
scripts/: body.rs  requests.sh  run.sh
src/: main.rs
src/mocks/: hi.txt  mocks.toml  users.json
