[package]
name = "proxxyy"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
warp = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.9"
url = "2"
bytes = "1.4"
log = "0.4"
